name : webkitfltkhs
version : 0.0.0.1
synopsis : Haskell Bindings to webkitfltk.
description:
    Low Level Bindings to WebkitFLTK, the FLTK port of WebKit. This allows Webkit to be used as a Widget in FLTKHS applications. For installation and quick start instruction please scroll all the way down to the README.
license : MIT
license-file : LICENSE
tested-with: GHC >=7.8.1
author : Aditya Siram
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/webkitfltkhs
category: UI,Graphics
build-type: Custom
cabal-version: >=1.20
source-repository head
  type: git
  location: http://github.com/deech/webkitfltkhs
library
  exposed-modules:
       Graphics.UI.FLTK.LowLevel.Webkit
       Graphics.UI.FLTK.LowLevel.WebkitMethods
  build-depends:
       base == 4.*,
       fltkhs >= 0.4.0.9,
       containers >= 0.5.0.0,
       bytestring
  build-tools: c2hs
  hs-source-dirs: src
  other-modules: C2HS
  include-dirs: ./c-src, ./
  default-language: Haskell2010
  ghc-options: -Wall
  if impl(ghc >= 8.0.1)
     cpp-options: -DHASCALLSTACK_AVAILABLE
  else
     if impl(ghc >= 7.10.2)
       cpp-options: -DCALLSTACK_AVAILABLE
  if impl(ghc >= 7.10)
     cpp-options: -DOVERLAPPING_INSTANCES_DEPRECATED

Executable webkitfltkhs-testapp
  Main-Is: TestApp.hs
  Hs-Source-Dirs: app
  Build-Depends:
    base == 4.*,
    fltkhs >= 0.4.0.9,
    webkitfltkhs >= 0.0.0.1
  default-language: Haskell2010
  ghc-Options: -Wall -threaded
  if os(windows)
   ghc-Options: -optl-mwindows
  if os(darwin)
   ghc-Options: -pgml g++ "-optl-Wl,-lfltkc" "-optl-Wl,-lwebkitfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-lwebkitfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
